compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__conflict_with_import.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "import foo.{type Bar} type Bar = Int"
---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import foo.{type Bar} type Bar = Int
  │             ^^^^^^^^  ^^^^^^^^^^^^^^ Redefined here
  │             │          
  │             First defined here

The type `Bar` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
